--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -32,6 +32,9 @@ spec:
     middleware:
       enabled: true
       nameOverride: traefik-forward-auth
+      trustForwardHeader: true
+      authResponseHeaders:
+        - X-Forwarded-User
     env:
       LOG_LEVEL: trace
       LOG_FORMAT: pretty
