--- a/kubernetes/apps/default/hajimari/app/ingress-route.yaml
+++ b/kubernetes/apps/default/hajimari/app/ingress-route.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: echo-server
+  name: hajimari
 spec:
   entryPoints:
     - web
