--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
@@ -16,6 +16,8 @@ spec:
         - name: api@internal
           kind: TraefikService
       middlewares:
+        - name: traefik-middleware-secure-headers
+          namespace: networking
         - name: traefik-forward-auth
           namespace: networking
   tls:
