--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -29,6 +29,13 @@ spec:
       repository: ghcr.io/kitos9112/traefik-forward-auth
       tag: latest
       pullPolicy: IfNotPresent
+    middleware:
+      enabled: false
+    service:
+      main:
+        ports:
+          http:
+            port: 4181
     # middleware:
     #   enabled: true
     #   nameOverride: traefik-forward-auth
