--- a/kubernetes/apps/networking/traefik/app/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/app/middleware.yaml
@@ -159,8 +159,7 @@ spec:
     middlewares:
       #- name: traefik-middleware-local-ips
       #- name: traefik-middleware-cloudflare-ips
-      #- name: traefik-forward-auth
-      - name: traefik-middleware-oauth
+      - name: traefik-forward-auth
       - name: traefik-middleware-redirect-https
       - name: traefik-middleware-rate-limit
       - name: traefik-middleware-secure-headers
