--- a/kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
@@ -8,6 +8,7 @@ metadata:
     app: traefik-forward-auth
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
     - match: Host(`auth.${SECRET_DOMAIN}`)
