--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
@@ -8,6 +8,7 @@ metadata:
   #   kubernetes.io/ingress.class: traefik-external
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
     - match: Host(`traefik.${SECRET_DOMAIN}`) #&& (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
@@ -17,28 +18,6 @@ spec:
           kind: TraefikService
       middlewares:
         - name: traefik-middleware-chains-forward-auth
-          namespace: networking
-  tls:
-    secretName: "${SECRET_DOMAIN/./-}-tls"
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: traefik-dashboard-v4
-  namespace: networking
-  # annotations:
-  #   kubernetes.io/ingress.class: traefik-external
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`traefik2.${SECRET_DOMAIN}`) #&& (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
-      kind: Rule
-      services:
-        - name: api@internal
-          kind: TraefikService
-      middlewares:
-        - name: traefik-forward-auth
           namespace: networking
   tls:
     secretName: "${SECRET_DOMAIN/./-}-tls"
