--- a/kubernetes/apps/networking/traefik/app/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/app/middleware.yaml
@@ -117,7 +117,7 @@ metadata:
   namespace: networking
 spec:
   forwardAuth:
-    address: http://traefik-forward-auth:4181
+    address: https://traefik-forward-auth:4181
     trustForwardHeader: true
     authResponseHeaders:
       - X-Forwarded-User
