--- a/kubernetes/apps/networking/traefik/app/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/app/middleware.yaml
@@ -144,7 +144,7 @@ spec:
   chain:
     middlewares:
       - name: traefik-middleware-redirect-https
-      #- name: traefik-middleware-local-ips
+      - name: traefik-middleware-local-ips
       # - name: traefik-middleware-cloudflare-ips
       - name: traefik-middleware-rate-limit
       - name: traefik-middleware-secure-headers
