--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./cloudflare-ddns/ks.yaml
   - ./external-dns/ks.yaml
   - ./traefik/ks.yaml
-  - ./k8s-gateway/ks.yaml
+  #- ./k8s-gateway/ks.yaml
   - ./metallb/ks.yaml
   - ./traefik-forward-auth/ks.yaml
   - wildcard-certificate
