--- a/kubernetes/apps/networking/traefik/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik/app/helmrelease.yaml
@@ -54,6 +54,8 @@ spec:
       # enabled: true
       # type: LoadBalancer
       spec:
+        annotations:
+          metallb.universe.tf/loadBalancerIPs: "${TRAEFIK_SERVICE_ADDR}"
         loadBalancerIP: "${TRAEFIK_SERVICE_ADDR}"
         externalTrafficPolicy: Cluster #testing Cluster - originally local
     ports:
