--- a/kubernetes/apps/networking/wildcard-certificate/wildcard-certificate.yaml
+++ b/kubernetes/apps/networking/wildcard-certificate/wildcard-certificate.yaml
@@ -2,10 +2,10 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "${SECRET_DOMAIN/./-}"
+  name: wildcard-certificate
   namespace: networking
 spec:
-  secretName: "${SECRET_DOMAIN/./-}-tls"
+  secretName: "wildcard-tls"
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
