--- a/kubernetes/apps/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/helmrelease.yaml
@@ -42,25 +42,25 @@ spec:
     #     - hosts:
     #         - *host
     #       secretName: weave-gitops-tls
-    ingress:
-      main:
-        enabled: true
-        ingressClassName: traefik
-        annotations:
-          cert-manager.io/cluster-issuer: letsencrypt-production
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.tls: "true"
-          #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-forward-auth@kubernetescrd
-          traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-default@kubernetescrd
-        hosts:
-          - host: "gitops.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - "gitops.${SECRET_DOMAIN}"
-            secretName: "gitops-${SECRET_DOMAIN/./-}-tls"
+    # ingress:
+    #   main:
+    #     enabled: true
+    #     ingressClassName: traefik
+    #     annotations:
+    #       cert-manager.io/cluster-issuer: letsencrypt-production
+    #       traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    #       traefik.ingress.kubernetes.io/router.tls: "true"
+    #       #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-forward-auth@kubernetescrd
+    #       traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-default@kubernetescrd
+    #     hosts:
+    #       - host: "gitops.${SECRET_DOMAIN}"
+    #         paths:
+    #           - path: /
+    #             pathType: Prefix
+    #     tls:
+    #       - hosts:
+    #           - "gitops.${SECRET_DOMAIN}"
+    #         secretName: "gitops-${SECRET_DOMAIN/./-}-tls"
     networkPolicy:
       create: false
     metrics:
