--- a/kubernetes/apps/flux-system/weave-gitops/app/ingress-route.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/ingress-route.yaml
@@ -5,6 +5,7 @@ metadata:
   name: gitops
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
     - match: Host(`gitops.${SECRET_DOMAIN}`)
