--- a/kubernetes/apps/default/weave-gitops/ks.yaml
+++ b/kubernetes/apps/default/weave-gitops/ks.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
-  path: ./kubernetes/apps/flux-system/weave-gitops/app
+  path: ./kubernetes/apps/default/weave-gitops/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -16,7 +16,7 @@ spec:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: weave-gitops
-      namespace: flux-system
+      namespace: default
   interval: 30m
   retryInterval: 1m
   timeout: 3m
