--- a/kubernetes/apps/default/whoami/app/ingress-route.yaml
+++ b/kubernetes/apps/default/whoami/app/ingress-route.yaml
@@ -3,6 +3,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: whoami
+  namespace: default
 spec:
   entryPoints:
     - web
