--- a/kubernetes/apps/default/whoami/app/ingress-route.yaml
+++ b/kubernetes/apps/default/whoami/app/ingress-route.yaml
@@ -12,8 +12,8 @@ spec:
     - match: Host(`whoami.${SECRET_DOMAIN}`)
       kind: Rule
       services:
-        - name: gitops
-          port: 8080
+        - name: whoami
+          port: 80
       middlewares:
         - name: traefik-middleware-chains-default
           namespace: networking
