--- a/kubernetes/apps/networking/authelia/ks.yaml
+++ b/kubernetes/apps/networking/authelia/ks.yaml
@@ -11,15 +11,15 @@ spec:
   sourceRef:
     kind: GitRepository
     name: homelab-kubernetes
-  dependsOn:
-    - name: dbms-cloudnative-pg
-    - name: dbms-redis
-    - name: security-onepassword-connect
+  # dependsOn:
+  #   - name: dbms-cloudnative-pg
+  #   - name: dbms-redis
+  #   - name: security-onepassword-connect
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: authelia
-      namespace: security
+      namespace: networking
   prune: true
   wait: true
   interval: 30m
