--- a/kubernetes/apps/networking/traefik/app/rbac.yaml
+++ b/kubernetes/apps/networking/traefik/app/rbac.yaml
@@ -67,4 +67,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: traefik-ingress-controller
-    namespace: traefik
+    namespace: networking
