--- a/kubernetes/apps/networking/traefik/ks.yaml
+++ b/kubernetes/apps/networking/traefik/ks.yaml
@@ -25,3 +25,28 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: traefik-add-ons
+  namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
+spec:
+  path: ./kubernetes/apps/networking/traefik/traefik/add-ons
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  dependsOn:
+    - name: cluster-apps-ingress-traefik
+  healthChecks:
+    - apiVersion: traefik.containo.us/v1alpha1
+      kind: TLSStore
+      name: default
+      namespace: networking
+  prune: true
+  wait: true
+  interval: 30m
+  retryInterval: 2m
+  timeout: 1m
