--- a/kubernetes/apps/networking/traefik/add-ons/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - wildcard-certificate.yaml
-  - default.yaml
+  - error-pages
+  - middlewares
+  - tls-store
