--- a/kubernetes/apps/networking/traefik/app/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik/app/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: networking
 resources:
   - ./helmrelease.yaml
-  - ./middleware.yaml
-  - ./rbac.yaml
-  - tls-store
+  # - ./middleware.yaml
+  # - ./rbac.yaml
+  #- tls-store
   - dashboard
