--- a/kubernetes/apps/networking/traefik/add-ons/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - error-pages
-  - middlewares
   - tls-store
+  - middleware.yaml
