--- a/kubernetes/apps/default/weave-gitops/app/ingress-route.yaml
+++ b/kubernetes/apps/default/weave-gitops/app/ingress-route.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: gitops
+  name: weave-gitops
   namespace: default
 spec:
   entryPoints:
@@ -12,7 +12,7 @@ spec:
     - match: Host(`gitops.${SECRET_DOMAIN}`)
       kind: Rule
       services:
-        - name: gitops
+        - name: weave-gitops
           port: 9001
       middlewares:
         - name: traefik-middleware-chains-default
