--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
@@ -11,7 +11,7 @@ spec:
     - web
     - websecure
   routes:
-    - match: Host(`traefik.${SECRET_DOMAIN}`) #&& (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+    - match: Host(`traefik.${SECRET_DOMAIN}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
       kind: Rule
       services:
         - name: api@internal
