--- a/kubernetes/apps/networking/traefik/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik/app/helmrelease.yaml
@@ -112,7 +112,7 @@ spec:
       #- "--api.dashboard=true"
       - --api.insecure=true
       - --serverstransport.insecureskipverify=true
-      #- --providers.kubernetesingress.ingressclass=traefik
+      - --providers.kubernetesingress.ingressclass=traefik
       #- --metrics.prometheus=true
       #- --metrics.prometheus.entryPoint=metrics
       - --accessLog=true
