--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -9,5 +9,5 @@ resources:
   #- ./k8s-gateway/ks.yaml
   - ./metallb/ks.yaml
   - ./traefik-forward-auth/ks.yaml
-  # - wildcard-certificate
-  # - traefik-error-pages
+  - wildcard-certificate
+  #- traefik-error-pages
