--- a/kubernetes/apps/default/hajimari/app/ingress-route.yaml
+++ b/kubernetes/apps/default/hajimari/app/ingress-route.yaml
@@ -14,7 +14,8 @@ spec:
         - name: hajimari
           port: 3000
       middlewares:
-        - name: networking-traefik-middleware-chains-default@kubernetescrd
+        #- name: networking-traefik-middleware-chains-default@kubernetescrd
+        - name: networking-traefik-middleware-chains-forward-auth@kubernetescrd
           namespace: networking
   tls:
     secretName: "hajimari-${SECRET_DOMAIN/./-}-tls"
