--- a/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
@@ -177,8 +177,8 @@ spec:
       #- name: traefik-middleware-local-ips
       #- name: traefik-middleware-cloudflare-ips
       - name: traefik-forward-auth
-      - name: traefik-middleware-redirect-https
-      - name: traefik-middleware-secure-headers
+      # - name: traefik-middleware-redirect-https
+      # - name: traefik-middleware-secure-headers
       - name: traefik-middleware-rate-limit
 
 ---
