--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: &app authelia
-  namespace: security
+  namespace: networking
 spec:
   interval: 15m
   chart:
@@ -47,14 +47,14 @@ spec:
           metrics:
             enabled: true
             port: 9959
-        monitor:
-          enabled: true
-          endpoints:
-            - port: metrics
-              scheme: http
-              path: /metrics
-              interval: 1m
-              scrapeTimeout: 10s
+        # monitor:
+        #   enabled: true
+        #   endpoints:
+        #     - port: metrics
+        #       scheme: http
+        #       path: /metrics
+        #       interval: 1m
+        #       scrapeTimeout: 10s
     ingress:
       main:
         enabled: true
