--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
@@ -17,7 +17,7 @@ spec:
         - name: api@internal
           kind: TraefikService
       middlewares:
-        - name: traefik-basic-auth
+        - name: traefik-middleware-chains-basic-auth
           namespace: networking
   tls:
     secretName: "${SECRET_DOMAIN/./-}-tls"
