--- a/kubernetes/apps/networking/traefik/add-ons/error-pages/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/error-pages/ingress-route.yaml
@@ -9,7 +9,7 @@ spec:
     - web
     - websecure
   routes:
-    - match: HostRegexp(`{host:.+}`) #HostRegexp(`{host:.+}`)
+    - match: HostRegexp(`{any:.+}`) #HostRegexp(`{host:.+}`) HostRegexp(`{any:.+}`)
       kind: Rule
       priority: 10
       services:
