--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 namespace: networking
 resources:
   - ./endpoints.yaml
-  - ./ingress-traefikCRD.yaml
+  - ./ingress-route.yaml
   - ./service.yaml
