--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/ks.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/ks.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: networking-external-proxmox
-  namespace: networking
+  namespace: flux-system
 spec:
   path: ./Kubernetes/apps/networking/traefik/add-ons/external-services/proxmox
   sourceRef:
