--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
@@ -19,8 +19,10 @@ spec:
           port: 8006
           namespace: default
           serversTransport: proxmox
+  # tls:
+  #   secretName: cluster-secrets
   tls:
-    secretName: cluster-secrets
+    secretName: "proxmix-${SECRET_DOMAIN/./-}-tls"
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
