--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
@@ -22,7 +22,7 @@ spec:
   # tls:
   #   secretName: cluster-secrets
   tls:
-    secretName: "proxmix-${SECRET_DOMAIN/./-}-tls"
+    secretName: "proxmox-${SECRET_DOMAIN/./-}-tls"
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
